# grpc_rs

./: Cargo.toml  build.rs
proto/: stream.proto
src/: client.rs  main.rs  server.rs
