[package]
name = "grpc_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
h2 = "0.4.7"
prost = "0.13.3"
tokio = {version = "1.41.1", features = ["full"]}
tokio-stream = "0.1.16"
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
name = "grpc-server"
path = "src/server.rs"

[[bin]]
name = "grpc-client"
path = "src/client.rs"